added CSS styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <tbody>
 <tr>
   <td>
-    Class 
+    class 
   </td>
   <td>
     .country 
@@ -41,7 +41,7 @@
     <td>Selects all elements</td>
   </tr>
   <tr>
-    <td>Element</td>
+    <td>element</td>
 <td>h2</td>  
 <td>Selects all &lt;h2&gt; elements</td>
 </tr>
@@ -83,5 +83,6 @@ element1~element2
   </tbody>
     </table>
     </table>
+  
   </body>
 </html>
