Finalised CSS styling and added footer

--- a/index.html
+++ b/index.html
@@ -17,72 +17,73 @@
         <th>Description</th>
       </thead>
       <tbody>
-<tr>
-  <td>
-    class 
-  </td>
-  <td>
-    .country 
-  </td>
-  <td>
-   Selects all elements with a class of Country 
-  </td>
-</tr>
-<tr>
-  <td>
-  #id </td>
+        <tr>
+          <td>class</td>
+          <td>.country</td>
+          <td>Selects all elements with a class of Country</td>
+        </tr>
+        <tr>
+          <td>#id</td>
 
-<td> #france</td>
-<td>Selects the element that has the id of France</td>
-   </tr>   
-  <tr>
-    <td>*</td>
-    <td>*</td>
-    <td>Selects all elements</td>
-  </tr>
-  <tr>
-    <td>element</td>
-<td>h2</td>  
-<td>Selects all &lt;h2&gt; elements</td>
-</tr>
-<tr>
-  <td>element.class</td>
-<td>h2.country</td>
-<td>Selects all &lt;h2&gt;elements with a class of Country</td>
-</tr>
-<tr>
-  <td>element, element</td>
-  <td>h1, div 
-  </td>
-  <td>Selects all &lt;h1&gt; and all &lt;div&gt; elements</td>
-</tr>
-<tr>
-  <td>element element</td>
-  <td>span p</td>
-  <td>Selects all &lt;span&gt; elements inside &lt;p&gt; elements </td>
-</tr>
-<tr>
-  <td>
-element>element 
-  </td>
-  <td>span > p</td>
-  <td> Selects all the &lt;p&gt; elements where the parent is a &lt;span&gt; element</td>
-</tr>
-<tr>
-  <td>element + element</td>
-  <td>div + p</td>
-  <td>Selects all the &lt;p&gt; elements that are placed immediately after &lt;div&gt; elements
-  </td>
-</tr>
-<tr>
-<td>
-element1~element2
-</td>
-<td>p ~ div</td>
-<td>Selects every &lt;div&gt; element that are preceded by a &lt;p&gt; element</td>
-  </tbody>
+          <td>#france</td>
+          <td>Selects the element that has the id of France</td>
+        </tr>
+        <tr>
+          <td>*</td>
+          <td>*</td>
+          <td>Selects all elements</td>
+        </tr>
+        <tr>
+          <td>element</td>
+          <td>h2</td>
+          <td>Selects all &lt;h2&gt; elements</td>
+        </tr>
+        <tr>
+          <td>element.class</td>
+          <td>h2.country</td>
+          <td>Selects all &lt;h2&gt;elements with a class of Country</td>
+        </tr>
+        <tr>
+          <td>element, element</td>
+          <td>h1, div</td>
+          <td>Selects all &lt;h1&gt; and all &lt;div&gt; elements</td>
+        </tr>
+        <tr>
+          <td>element element</td>
+          <td>span p</td>
+          <td>Selects all &lt;span&gt; elements inside &lt;p&gt; elements</td>
+        </tr>
+        <tr>
+          <td>element>element</td>
+          <td>span > p</td>
+          <td>
+            Selects all the &lt;p&gt; elements where the parent is a
+            &lt;span&gt; element
+          </td>
+        </tr>
+        <tr>
+          <td>element + element</td>
+          <td>div + p</td>
+          <td>
+            Selects all the &lt;p&gt; elements that are placed immediately after
+            &lt;div&gt; elements
+          </td>
+        </tr>
+        <tr>
+          <td>element1~element2</td>
+          <td>p ~ div</td>
+          <td>
+            Selects every &lt;div&gt; element that are preceded by a &lt;p&gt;
+            element
+          </td>
+        </tr>
+      </tbody>
     </table>
-    </table>
-  
+    <br />
+
+    <footer>
+      by
+      <a href="https://github.com/hannahlouisaalexander">Hannah Alexander </a>
+    </footer>
   </body>
 </html>
